--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -341,6 +341,7 @@
 }
 
 .dark .prose-content blockquote {
+
   background: oklch(0.18 0 0);
   border-left-color: oklch(0.696 0.17 162.48);
   color: oklch(0.8 0 0);
@@ -393,6 +394,8 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   margin: 0.75rem auto;
   max-width: 100%;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
   height: auto;
   display: block;
 }
